--- a/index.html
+++ b/index.html
@@ -116,6 +116,14 @@
             <p class="section-subtitle">Especialistas dedicados em suas áreas, unidos pela excelência e inovação</p>
 
             <div class="bento-grid">
+                <div class="category-card" data-category="Ciencia">
+                    <div>
+                        <span class="category-icon">🏥</span>
+                        <h2>Ciência & Pesquisa</h2>
+                        <p class="category-description">Pesquisa científica com propósito: soluções inovadoras em microbiologia, biologia molecular e segurança laboratorial. Unimos rigor acadêmico e aplicação prática para transformar conhecimento em impacto real.</p>
+                    </div>
+                    <div id="Ciencia" class="professionals-container"></div>
+                </div>
                 <div class="category-card" data-category="Saúde">
                     <div>
                         <span class="category-icon">🏥</span>
