Updating modal icon

--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
             <div class="bento-grid">
                 <div class="category-card" data-category="Ciencia">
                     <div>
-                        <span class="category-icon">🏥</span>
+                        <span class="category-icon">🧪</span>
                         <h2>Ciência & Pesquisa</h2>
                         <p class="category-description">Pesquisa científica com propósito: soluções inovadoras em microbiologia, biologia molecular e segurança laboratorial. Unimos rigor acadêmico e aplicação prática para transformar conhecimento em impacto real.</p>
                     </div>
