--- a/index.html
+++ b/index.html
@@ -62,8 +62,8 @@
     </script>
 
     <!-- Stylesheet split suggested -->
-    <link rel="stylesheet" href="styles.css">
-    <script defer src="main.js"></script>
+    <link rel="stylesheet" href="styles/styles.css">
+    <script defer src="scripts/main.js"></script>
 </head>
 <body>
 <!-- Navigation -->
@@ -185,14 +185,7 @@
         <section class="section partners-section">
             <h2 class="section-title">Parceiros de Confiança</h2>
             <p class="section-subtitle">Trabalhamos com as melhores organizações do mercado</p>
-            <div class="partners-grid">
-                <div class="partner-logo">UFPR</div>
-                <div class="partner-logo">UTFPR</div>
-                <div class="partner-logo">CREA-PR</div>
-                <div class="partner-logo">CONFEF</div>
-                <div class="partner-logo">CREFITO</div>
-                <div class="partner-logo">Tech Partners</div>
-            </div>
+            <div id="partnersGrid" class="partners-grid"></div>
         </section>
     </main>
 </div>
